--- a/maze update 5.7/Maze/Maze.cbp
+++ b/maze update 5.7/Maze/Maze.cbp
@@ -55,9 +55,12 @@
 		<Unit filename="include/Enemies.h" />
 		<Unit filename="include/Maze.h" />
 		<Unit filename="include/Timer.h" />
+		<Unit filename="include/ai.h" />
 		<Unit filename="include/enemyai.h" />
 		<Unit filename="include/player.h" />
+		<Unit filename="include/templateFunctions.h" />
 		<Unit filename="include/units.h" />
+		<Unit filename="include/utilityFunctions.h" />
 		<Unit filename="include/vectorstuff.h" />
 		<Unit filename="include/wall.h" />
 		<Unit filename="main.cpp" />
@@ -66,8 +69,8 @@
 		<Unit filename="src/Timer.cpp" />
 		<Unit filename="src/enemyai.cpp" />
 		<Unit filename="src/player.cpp" />
-		<Unit filename="src/units.cpp" />
-		<Unit filename="src/vectorstuff.cpp" />
+		<Unit filename="src/templateFunctions.cpp" />
+		<Unit filename="src/utilityFunctions.cpp" />
 		<Unit filename="src/wall.cpp" />
 		<Extensions>
 			<code_completion />
