--- a/maze update 5.7/Maze/Maze.cbp
+++ b/maze update 5.7/Maze/Maze.cbp
@@ -58,6 +58,7 @@
 		<Unit filename="include/ai.h" />
 		<Unit filename="include/enemyai.h" />
 		<Unit filename="include/player.h" />
+		<Unit filename="include/templateFunctions.cpp" />
 		<Unit filename="include/templateFunctions.h" />
 		<Unit filename="include/units.h" />
 		<Unit filename="include/utilityFunctions.h" />
@@ -69,8 +70,8 @@
 		<Unit filename="src/Timer.cpp" />
 		<Unit filename="src/enemyai.cpp" />
 		<Unit filename="src/player.cpp" />
-		<Unit filename="src/templateFunctions.cpp" />
 		<Unit filename="src/utilityFunctions.cpp" />
+		<Unit filename="src/vectorstuff.cpp" />
 		<Unit filename="src/wall.cpp" />
 		<Extensions>
 			<code_completion />
